--- a/src/index.html
+++ b/src/index.html
@@ -1,38 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unit-Converter</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div id="main-container">
         <div class="header-container">
-            <h1>Metric/Imperial Unit Conversion</h1>
-            <input type="text">
-            <button>Convert</button>
+            <h1 id="main-title">Metric/Imperial Unit Conversion</h1>
+            <input id="input-field" type="text">
+            <button id="btn-convert" class="btn">Convert</button>
         </div>
         <div class="conversion-container">
             <div class="conversion-section">
-            <h4>Length (Meter / Feet)</h4>
-            <p>20 meters = 65.616 feet | 20 feet = 6.096 meters</p>
+                <h4 class="units-title">Length (Meter / Feet)</h4>
+                <p id="output-length" class="units-output">1 meters = 3.281 feet | 1 feet = 0.305 meters</p>
             </div>
-    
+
             <div class="conversion-section">
-                <h4>Volume (Liters / Gallons)</h4>
-                <p>20 liters = 5.284 gallons | 20 gallons = 75.708 liters</p>
+                <h4 class="units-title">Volume (Liters / Gallons)</h4>
+                <p id="output-volume" class="units-output">1 liters = 0.264 gallons | 1 gallons = 3.785 liters</p>
             </div>
-    
+
             <div class="conversion-section">
-                <h4>Mass (Kilograms / Pounds)</h4>
-                <p>20 kilo's = 44.092 pounds | 20 pounds = 9.072 kilos</p>  
+                <h4 class="units-title">Mass (Kilograms / Pounds)</h4>
+                <p id="output-mass" class="units-output">1 kilos = 2.205 pounds | 1 pounds = 0.454 kilos</p>
             </div>
         </div>
-    </div>  
+    </div>
 
     <script src="index.js"></script>
 </body>
+
 </html>
