--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="images/x-icon" href="./images/favicon.ico">
     <title>Unit-Converter</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,9 +16,12 @@
 
 <body>
     <div id="main-container">
+        <div class="switch-mode-container">
+            <button id="btn-mode">Switch to <br>Dark Mode</button>
+        </div>
         <div class="header-container">
-            <h1 id="main-title">Metric/Imperial Unit Conversion</h1>
-            <input id="input-field" type="text">
+            <h1 class="main-title">Metric/Imperial Unit Conversion</h1>
+            <input class="input-field" type="text">
             <button id="btn-convert" class="btn">Convert</button>
         </div>
         <div class="conversion-container">
